# cs430-project-2-basic-raycaster

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: 2_planes.json  2_planes.ppm  4_planes_1_sphere.json  4_planes_1_sphere.ppm  camera_last.json  camera_last.ppm  missing_params.json  negative_camera_dim.json  negative_color.json  up_arrow.json  up_arrow.ppm
source/: constants.h  main.c
source/imaging/: ppm.c  ppm.h
source/json/: json.c  json.h  json_helpers.c  json_helpers.h  json_parsers.c  json_parsers.h
source/raycaster/: 3dmath.h  raycaster.c  raycaster.h  raycaster_helpers.c
src/: main.c  raycaster_helpers.c
